Import code from other pkgs (#5)
* "Import" `ui` instead of "depend" on it to export all of `ui`'s API
* import code from `ui`: on-load logic and RStudio add-in bindings
* refactor the attachment wizard
* new TODOs

--- a/TODO
+++ b/TODO
@@ -2,3 +2,16 @@
    * chronicler-base: all deps
    * chronicler: github packages
 
+prepare for presentation
+  * make attaching to repository on load user-friendly
+  * show how to identify files
+  * deploy a sample repository into Docker image
+  * make it possible to see the artifact after successful identification:
+    either in the browser or in the console (?)
+
+use scenarios:
+  * identify artifact by file
+  * full lineage of objects in a paper
+
+add $ handling to defer
+rename commits to steps? snapshots?
